--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ a:active {
 <section> <!-- main -->
    <section> <h3>제 1주</a></h3>
       <ul style="list-style-type:circle">
-         <li><a href="parkhyejeong2.github.io/java/week_1/example.html" target="_blank"> 학번 이름 출력하기 </a></li>
+         <li><a href="kimyoujeong.github.io/week1/test,html" target="_blank"> 학번 이름 출력하기 </a></li>
       </ul>
    </section>
    <section> <h3>제 2주</a></h3>
