--- a/index.html
+++ b/index.html
@@ -35,5 +35,15 @@ a:active {
          <li><a href="kimyoujeong.github.io/week1/test.html" target="_blank"> 학번 이름 출력하기 </a></li>
       </ul>
    </section>
+   <section> <h3>제 2주</a></h3>
+      <ul style="list-style-type:circle">
+         <li><a href="kimyoujeong.github.io/week1/test.html" target="_blank"> 학번 이름 출력하기 </a></li>
+      </ul>
+   </section>
+   <section> <h3>제 3주</a></h3>
+      <ul style="list-style-type:circle">
+         <li><a href="kimyoujeong.github.io/week1/test.html" target="_blank"> 학번 이름 출력하기 </a></li>
+      </ul>
+   </section>
 </section>
 </body> </html> 
